[project]
name = "mobility-agent"
version = "0.1.0"
description = "AI-powered transportation planning system using CrewAI"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "crewai>=0.1.0",
    "langchain>=0.1.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "ipython>=8.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
select = ["E", "F", "I", "N"]
line-length = 88

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
